minikube/hpa-ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector: # All the pods with this label will be included in the Service
    app: nginx
  ports: 
    - port: 80
      targetPort: http
